modal overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ main {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
   animation: fromTop 0.5s;
@@ -181,7 +181,7 @@ main {
 .modalContent {
   position: relative;
   background-color: #fefefe;
-  margin: 15% auto;
+  margin: 10% auto;
   padding: 1.2rem;
   width: 60%;
   border-radius: 15px;
@@ -231,7 +231,7 @@ main {
 
 .cartContent {
   background-color: #fefefe;
-  margin: 15% auto;
+  margin: 10% auto;
   padding: 1.5rem;
   width: 40rem;
   height: 40rem;
